--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-/*
- * Use this CSS to learn some intersting techniques,
- * in case you're wondering how I built the UI.
- * Have fun! 😁
- */
-
 * {
   margin: 0;
   padding: 0;
@@ -102,10 +96,9 @@ nav {
   margin: 4rem auto;
   display: grid;
   grid-template-columns: 4fr 3fr;
-  grid-template-rows: auto repeat(3, 15rem) auto;
+  grid-template-rows: auto 15rem 15rem 15rem auto;
   gap: 2rem;
 
-  /* NOTE This creates the fade in/out anumation */
   opacity: 0;
   transition: all 1s;
 }
@@ -134,22 +127,22 @@ nav {
   font-weight: 400;
 }
 
-/* MOVEMENTS */
-.movements {
+/* transfers */
+.transfers {
   grid-row: 2 / span 3;
   background-color: #fff;
   border-radius: 1rem;
   overflow: scroll;
 }
 
-.movements__row {
+.transfers__row {
   padding: 2.25rem 4rem;
   display: flex;
   align-items: center;
   border-bottom: 1px solid #eee;
 }
 
-.movements__type {
+.transfers__type {
   font-size: 1.1rem;
   text-transform: uppercase;
   font-weight: 500;
@@ -159,22 +152,22 @@ nav {
   margin-right: 2rem;
 }
 
-.movements__date {
+.transfers__date {
   font-size: 1.1rem;
   text-transform: uppercase;
   font-weight: 500;
   color: #666;
 }
 
-.movements__type--deposit {
+.transfers__type--deposit {
   background-image: linear-gradient(to top left, #39b385, #9be15d);
 }
 
-.movements__type--withdrawal {
+.transfers__type--withdrawal {
   background-image: linear-gradient(to top left, #e52a5a, #ff585f);
 }
 
-.movements__value {
+.transfers__value {
   font-size: 1.7rem;
   margin-left: auto;
 }
